# fantasy-football-forecasting

./: .gitignore  Cargo.toml  Justfile  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  filter.rs  lib.rs  pbp.rs  roster.rs  scoring.rs
src/: main.rs  play.rs  scoring.rs
