[package]
name = "fff-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fff"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.41.0", features = ["parquet", "sql", "lazy"] }
anyhow = "1.0.86"
itertools = "0.13.0"
clap = { version = "4.5.15", features = ["derive"] }
fff = { path = "../lib" }
log = "0.4.22"
simplelog = "0.12.2"
